--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,5 +19,5 @@ jobs:
       run: make
     - name: make check
       run: make check
-    - name: make run
-      run: make run
+    #- name: make run
+    #  run: make run
